--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>React App</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles.css" />
-  </head>
 
-  <body>
-    <div id="root"></div>
-    <script src="../src/index.js" type="text/jsx"></script>
-  </body>
+<head>
+  <title>EmojiPedia - Find The Perfect Emoji For Any Situation</title>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script src="../src/index.js" type="text/jsx"></script>
+</body>
+
 </html>
