--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,6 @@
   <body>
     <div id="root"></div>
     <script src="../src/index.js" type="text/jsx"></script>
+    <script src="https://gist.github.com/KonradLinkowski/4b2b825d2540c4eecfc5dc1f9e42a87f.js"></script>
   </body>
 </html>
